# coursework_on_databases

./: Dockerfile  config.ini  config.py  db_class.py  docker-compose.yml  main.py  pyproject.toml
backup/: Dockerfile  backup.py
my_university/: config.py  db_class.py  forms.py  main.py  models.py  routes.py  s3_client.py  seed.py
my_university/templates/: base.html  classroom_form.html  classrooms_list.html  create_user.html  curriculum_form.html  curriculum_view.html  curriculums_list.html  department_form.html  departments_list.html  group_form.html  groups_list.html  index.html  login.html  material_upload.html  materials_list.html  schedule_form.html  schedule_manage.html  schedule_view.html  subject_form.html  subjects_list.html  user_edit.html  users_list.html
