[project]
name = "course"
dynamic=["version"]
authors = [
    {name = "Kirill Davydenko", email = "dawidenkokirill@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "typing-extensions>=4.15.0",
    "psycopg2>=2.9.11",
    "flask>=3.1.2",
]

[tool.setuptools.packages.find]
where = ["my_university"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"